--- a/css/usuarios.css
+++ b/css/usuarios.css
@@ -18,7 +18,7 @@ main {
   text-decoration: none;
   color: #0b7a08;
   position: relative;
-  top: -50px;
+  top: -10px;
 }
 
 .contenedor__todo {
@@ -78,7 +78,7 @@ main {
 
 .contenedor__todo form {
   width: 100%;
-  padding: 80px 20px;
+  padding: 30px 20px;
   box-sizing: border-box;
   background: #ffff;
   border-radius: 20px;
@@ -109,7 +109,7 @@ main {
 .contenedor__todo form input,
 .contenedor__todo form select {
   width: 100%;
-  margin-top: 20px;
+  margin-bottom: 20px;
   padding: 10px;
   border: none;
   background: #e9e9e9f2;
